[gd_scene load_steps=36 format=3 uid="uid://c1bhreaem7qlk"]

[ext_resource type="Script" path="res://Player.gd" id="1_x588u"]
[ext_resource type="Resource" uid="uid://belbro1hfjjh3" path="res://playerinventory.tres" id="2_4ssf6"]
[ext_resource type="Resource" uid="uid://dba0oafttyvuv" path="res://quickinventory.tres" id="3_phgyy"]
[ext_resource type="Texture2D" uid="uid://ctaqpvt85mg5i" path="res://assets/Players/players grey x1.png" id="4_ortc0"]
[ext_resource type="Texture2D" uid="uid://ch4cn51rs5snq" path="res://assets/circle128.png" id="5_3aevc"]
[ext_resource type="Shader" path="res://hurtbox.gdshader" id="6_bx7nh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t7thv"]
radius = 4.66667
height = 15.3333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idmjf"]
radius = 1.99991
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0156n"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j65ch"]
atlas = ExtResource("4_ortc0")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc7g2"]
atlas = ExtResource("4_ortc0")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6riec"]
atlas = ExtResource("4_ortc0")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkc12"]
atlas = ExtResource("4_ortc0")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82h4m"]
atlas = ExtResource("4_ortc0")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p5l0"]
atlas = ExtResource("4_ortc0")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4if4o"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifdsy"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrqrd"]
atlas = ExtResource("4_ortc0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bc24"]
atlas = ExtResource("4_ortc0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3y7h"]
atlas = ExtResource("4_ortc0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x84qc"]
atlas = ExtResource("4_ortc0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw5qp"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiuc1"]
atlas = ExtResource("4_ortc0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cljop"]
atlas = ExtResource("4_ortc0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjstr"]
atlas = ExtResource("4_ortc0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_goty7"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40xii"]
atlas = ExtResource("4_ortc0")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jo7t"]
atlas = ExtResource("4_ortc0")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn8d4"]
atlas = ExtResource("4_ortc0")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r27ut"]
atlas = ExtResource("4_ortc0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntfln"]
atlas = ExtResource("4_ortc0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gnc0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0156n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j65ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc7g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6riec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkc12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82h4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p5l0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4if4o")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifdsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrqrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bc24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3y7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x84qc")
}],
"loop": true,
"name": &"reload",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw5qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiuc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cljop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjstr")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_goty7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40xii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jo7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn8d4")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r27ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntfln")
}],
"loop": true,
"name": &"talk",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0pub3"]
radius = 49.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wx2j1"]
shader = ExtResource("6_bx7nh")
shader_parameter/mouseSize = 0.8
shader_parameter/smoothObjectPadding = 0.66
shader_parameter/alpha = 0.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tgny2"]
size = Vector2(1000, 1000)

[node name="Player" type="CharacterBody2D" groups=["players"]]
z_index = 999
y_sort_enabled = true
position = Vector2(200, 200)
collision_layer = 512
collision_mask = 15712272
motion_mode = 1
script = ExtResource("1_x588u")
inventory = ExtResource("2_4ssf6")
quickinventory = ExtResource("3_phgyy")

[node name="hitbox" type="AnimatableBody2D" parent="."]
z_index = 101
position = Vector2(0, -6)
collision_layer = 2048
collision_mask = 8
sync_to_physics = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_t7thv")

[node name="Shape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_idmjf")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13.6667)
sprite_frames = SubResource("SpriteFrames_gnc0s")
animation = &"death"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerReach" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 268435456

[node name="Sprite2D" type="Sprite2D" parent="PlayerReach"]
modulate = Color(1, 1, 1, 0.164706)
self_modulate = Color(0.0745098, 0.27451, 0.435294, 1)
texture = ExtResource("5_3aevc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerReach"]
shape = SubResource("CircleShape2D_0pub3")

[node name="RayCast2D" type="RayCast2D" parent="PlayerReach"]
enabled = false
collision_mask = 2621440
hit_from_inside = true

[node name="HurtBox" type="CanvasLayer" parent="."]
layer = 2

[node name="HurtShader" type="TextureRect" parent="HurtBox"]
top_level = true
z_index = 4096
material = SubResource("ShaderMaterial_wx2j1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_tgny2")
